--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,22 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.3
-  rxdart: ^0.27.2
-  provider: ^6.0.1
-  google_fonts: ^2.1.0
+  cupertino_icons: ^1.0.4
+  rxdart: ^0.27.3
+  provider: ^6.0.2
+  google_fonts: ^2.2.0
   uuid: ^3.0.5
+  json_annotation: ^4.4.0
+  equatable: ^2.0.3
+  shared_preferences: ^2.0.11
+  image_picker: ^0.8.4+4
+  path_provider: ^2.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+  json_serializable: ^6.1.3
+  build_runner: ^2.1.7
 flutter:
 
   uses-material-design: true
